<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <ScrollView
        android:id="@+id/sc_sv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="80dp">

        <LinearLayout
            android:layout_width="375dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_sv_img"
                android:layout_width="375dp"
                android:layout_height="283dp"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/tv_sv_des"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/color_010101"
                android:textSize="14sp"
                android:layout_margin="10dp"/>

            <TextView
                android:id="@+id/tv_sv_money"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/color_E51C23"
                android:textSize="16sp"
                android:layout_marginTop="10dp"
                android:gravity="center"/>

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:src="@mipmap/erweima"/>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true">

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/color_707070" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true"
            android:paddingTop="10dp">

            <TextView
                android:id="@+id/tv_acd_wei"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@mipmap/share_wei"
                android:gravity="center"
                android:text="@string/share_wei"
                android:textSize="13sp"
                android:drawablePadding="10dp"/>

            <TextView
                android:id="@+id/tv_acd_peng"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@mipmap/share_peng"
                android:gravity="center"
                android:text="@string/share_peng"
                android:textSize="13sp"
                android:drawablePadding="10dp"/>

            <TextView
                android:visibility="gone"
                android:id="@+id/tv_acd_qq"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@mipmap/share_qq"
                android:gravity="center"
                android:text="@string/share_qq"
                android:textSize="13sp" />

            <TextView
                android:visibility="gone"
                android:id="@+id/tv_acd_bo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@mipmap/share_bo"
                android:gravity="center"
                android:text="@string/share_bo"
                android:textSize="13sp" />

            <TextView
                android:visibility="gone"
                android:id="@+id/tv_acd_kong"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@mipmap/share_kong"
                android:gravity="center"
                android:text="@string/share_kong"
                android:textSize="13sp" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>